--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/platform-fastify": "^11.1.8",
+    "@types/soap": "^0.21.0",
     "fastify": "^5.6.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
-    "soap": "^1.6.0"
+    "soap": "^1.6.0",
+    "wssecurity": "^0.2.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
